Added some interfaces to make using the parsetree easier.